--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^11.0.0",
     "eslint": "^8.6.0",
     "express": "^4.17.2",
+    "lodash": "^4.17.21",
     "mongoose": "^6.1.6",
     "nodemon": "^2.0.15"
   },
