--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose",
-    "dev": "nodemon index.js",
+    "test": "NODE_ENV=test jest --verbose --runInBand -- tests/bloglist_api.test.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "start": "NODE_ENV=production node index.js",
     "lint": "eslint ."
   },
   "author": "",
@@ -20,6 +21,7 @@
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
-    "jest": "^27.4.7"
+    "jest": "^27.4.7",
+    "supertest": "^6.2.1"
   }
 }
