--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^11.0.0",
     "eslint": "^8.6.0",
     "express": "^4.17.2",
+    "express-async-errors": "^3.1.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.1.6",
     "nodemon": "^2.0.15"
