--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8.6.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.1.6",
     "nodemon": "^2.0.15"
